# docs/swagger.json
@@ -199,7 +199,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "更新选择题",
+                "description": "更新选择题(description为空或不传则维持原description,choices只需传需要更新的)",
                 "parameters": [
                     {
                         "description": "选择题信息",
@@ -315,6 +315,51 @@
                     },
                     "409": {
                         "description": "用户不存在",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/upload/public": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "上传公开文件",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "文件",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "文件 URL",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "请求解析失败",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "请求被禁止",
                         "schema": {
                             "type": "string"
                         }
